--- a/server/views/pages/view.pug
+++ b/server/views/pages/view.pug
@@ -57,8 +57,8 @@ block content
               if !isGuest
                 li
                   a(href='/admin')
-                    i.icon-head
-                    span= t('nav.account')
+                    i.icon-cog
+                    span= t('nav.settings')
               else
                 li
                   a(href='/login')
