--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -29,7 +29,7 @@ html
   body
     #root.has-stickynav
       include ./common/header.pug
-      //-include ./common/alerts.pug
+      alert
       main
         block content
       include ./common/footer.pug
