--- a/server/views/pages/all.pug
+++ b/server/views/pages/all.pug
@@ -1,40 +1,24 @@
 extends ../layout.pug
 
-block rootNavRight
-  i.nav-item#notifload
-
 block content
-
-  #page-type-all
-    .container.is-fluid.has-collapsable-nav
-      .sidebar.is-collapsed
-        aside
-          .sidebar-label
-            span= t('sidebar.nav')
-          ul.sidebar-menu
-            li
-              a(href='/')
-                i.icon-home
-                span= t('nav.home')
-            if !isGuest
-              li
-                a(href='/admin')
-                  i.icon-head
-                  span= t('nav.account')
-            else
-              li
-                a(href='/login')
-                  i.icon-unlock
-                  span= t('nav.login')
-      ul.collapsable-nav(v-for='treeItem in tree', :class='{ "has-children": treeItem.hasChildren }', v-cloak)
-        li(v-for='page in treeItem.pages', :class='{ "is-active": page.isActive }')
-          a(v-on:click='mainAction(page)')
-            template(v-if='page._id !== "home"')
-              i(:class='{ "icon-folder2": page.isDirectory, "icon-file-text-o": !page.isDirectory }')
-              span {{ page.title }}
-            template(v-else)
+  .container.is-fluid.has-collapsable-nav
+    .sidebar.is-collapsed
+      aside
+        .sidebar-label
+          span= t('sidebar.nav')
+        ul.sidebar-menu
+          li
+            a(href='/')
               i.icon-home
               span= t('nav.home')
-          a.is-pagelink(v-if='page.isDirectory && page.isEntry', v-on:click='goto(page._id)')
-            i.icon-file-text-o
-            i.icon-arrow-right2
+          if !isGuest
+            li
+              a(href='/admin')
+                i.icon-cog
+                span= t('nav.account')
+          else
+            li
+              a(href='/login')
+                i.icon-unlock
+                span= t('nav.login')
+    tree
