feat: anchor - copy link to clipboard

--- a/server/views/pages/admin/users.pug
+++ b/server/views/pages/admin/users.pug
@@ -1,7 +1,7 @@
 extends ./_layout.pug
 
 block rootNavRight
-  i.nav-item#notifload
+  loading-spinner
   .nav-item
     a.button(v-on:click='$store.dispatch("adminUsersCreateOpen")')
       i.icon-plus
