refactor: client-side optimizations + lazy-loading

--- a/server/views/pages/view.pug
+++ b/server/views/pages/view.pug
@@ -31,7 +31,8 @@ block rootNavRight
 
 block content
 
-  #page-type-view.page-type-container(data-entrypath=pageData.meta.path)
+  //- #page-type-view.page-type-container(data-entrypath=pageData.meta.path)
+  content-view(inline-template)
     .container.is-fluid.has-mkcontent
       .columns.is-gapless
 
