--- a/client/scss/components/nav.scss
+++ b/client/scss/components/nav.scss
@@ -68,6 +68,11 @@
 		flex-grow: 1;
 		justify-content: flex-end;
 	}
+
+  .nav-item {
+    align-items: stretch;
+    padding: 0 0 0 10px;
+  }
 }
 
 .nav-item {
@@ -123,38 +128,23 @@
 	// BUTTONS
 
 	.button {
-		border: 1px solid mc($primary, '900');
-		background-color: mc($primary, '800');
+		border: none;
+		background-color: mc($primary, '600');
 		transition: all .4s ease;
 		color: #FFF;
 		border-radius: 0;
-
-		&:first-child {
-			border-top-left-radius: 4px;
-			border-bottom-left-radius: 4px;
-		}
-
-		&:last-child {
-			border-top-right-radius: 4px;
-			border-bottom-right-radius: 4px;
-		}
+    height: auto;
 
 		&.is-outlined {
-			background-color: mc($primary, '600');
-			border-color: mc($primary, '800');
+			background-color: mc($primary, '500');
 			color: mc($primary, '100');
 		}
 
 		&:hover {
-			border-color: mc($primary, '900');
-			background-color: mc($primary, '900');
+			background-color: mc($primary, '700');
 			color: #FFF;
 		}
 
-	}
-
-	.button + .button {
-		margin-left: 1px;
 	}
 
 	// INPUTS
