feat: Added localization to editor-codeblock

--- a/server/views/pages/view.pug
+++ b/server/views/pages/view.pug
@@ -18,7 +18,7 @@ block rootNavRight
     a.button.is-outlined(href='/source/' + pageData.meta.path)
       i.icon-loader
       span= t('nav.source')
-    a.button.is-outlined(href='/hist/' + pageData.meta.path)
+    //- a.button.is-outlined(href='/hist/' + pageData.meta.path)
       i.icon-clock
       span= t('nav.history')
     if rights.write
