refactor: editor-video -> vue component + localization

--- a/server/views/pages/create.pug
+++ b/server/views/pages/create.pug
@@ -18,5 +18,7 @@ block content
     .editor-area
       textarea(ref='editorTextArea')= pageData.markdown
 
+  editor-video
+  editor-codeblock
   modal-discard-page(mode='create', current-path=pageData.meta.path)
   page-loader(text=t('loading.editor'))
