refactor: editor-file -> vue component (UI, core, new folder, rename, insert)

--- a/server/views/pages/source.pug
+++ b/server/views/pages/source.pug
@@ -25,7 +25,7 @@ block content
 
   source-view(inline-template, entrypath=pageData.meta.path, v-cloak)
     .ace-container
-      #source-display= pageData.markdown
+      #source-display(v-pre)= pageData.markdown
 
   modal-create-page(basepath=pageData.meta.path)
   modal-move-page(current-path=pageData.meta.path)
