refactor: editor-file.vue -> image + localization

--- a/server/views/pages/create.pug
+++ b/server/views/pages/create.pug
@@ -18,6 +18,7 @@ block content
     .editor-area
       textarea(ref='editorTextArea', v-pre)= pageData.markdown
 
+  editor-file
   editor-video
   editor-codeblock
   modal-discard-page(mode='create', current-path=pageData.meta.path)
