fix: Install fixes + localization home key

--- a/server/views/pages/all.pug
+++ b/server/views/pages/all.pug
@@ -10,7 +10,7 @@ block content
           li
             a(href='/')
               i.icon-home
-              span= t('nav.home')
+              span= t('nav.root')
           if !isGuest
             li
               a(href='/admin')
