--- a/server/views/pages/view.pug
+++ b/server/views/pages/view.pug
@@ -44,7 +44,7 @@ block content
               li
                 a(href='/')
                   i.icon-home
-                  span= t('nav.home')
+                  span= t('nav.root')
               li
                 a(href='/all')
                   i.icon-paper
