--- a/server/views/pages/admin/_layout.pug
+++ b/server/views/pages/admin/_layout.pug
@@ -8,7 +8,7 @@ block rootNavRight
   .nav-item
     a.button.btn-edit-discard(href='/')
       i.icon-home
-      span= t('nav.home')
+      span= t('nav.root')
 
 block content
 
@@ -25,7 +25,7 @@ block content
               li
                 a(href='/')
                   i.icon-home
-                  span= t('nav.home')
+                  span= t('nav.root')
 
           aside
             .sidebar-label
